--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-0 right-0">
               <img src="src/img/hero.png" alt="Muhammad Al Fatih" class="max-w-full mx-auto" />
-              <span class="absolute -bottom-7 -z-10 left-1/2 -translate-x-1/2 md:scale-150 md:bottom-16">
-                <svg width="400" height="350" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+              <span class="absolute -bottom-2 -z-10 left-1/2 -translate-x-1/2 md:scale-150 md:top-20">
+                <svg width="350" height="350" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
                     fill="#14b8a6"
                     d="M46.8,-55.7C60.9,-43.9,72.9,-29.4,69.9,-16.7C66.9,-4,49.1,7,39.5,22C29.9,36.9,28.5,55.8,21.2,58.7C13.8,61.7,0.4,48.6,-17.9,44.2C-36.3,39.7,-59.6,43.8,-64.4,36.6C-69.2,29.5,-55.6,11,-51,-8C-46.5,-27,-51,-46.6,-44,-59.7C-37.1,-72.7,-18.5,-79.2,-1.1,-77.8C16.3,-76.5,32.6,-67.4,46.8,-55.7Z"
